--- a/assets/style.css
+++ b/assets/style.css
@@ -1,21 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Lobster&display=swap');
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background:  #664a33;
     background-image: url('./back.jpg');
     background-repeat: no-repeat;
     background-size: contain;
 }
 a {
     cursor: pointer;
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+    padding: 0;
 }
 .menu {
+    margin: 0;
     display: flex;
     justify-content: center;
 }
-.menu-option , .menu-social{
+/* .menu .menu-item {
+} */
+.menu-item .menu-option {
     color: white;
     padding: 20px;
+    display: block;
+}
+
+.menu-item .menu-social{
+    color: white;
 }
 .menu-option:hover , .menu-social :hover {
     background: rgb(229, 57, 60);
@@ -33,5 +48,114 @@ a {
     text-align: center;
     padding-top: 18px;
 }
+.name {
+    display: block;
+    text-align: center;
+    color: white;
+    font-family: 'Lobster', cursive;
+    font-size: 58px;
+}
+
+.content {
+    margin: 2% 10%;
+    padding: 10%;
+    border: 1px solid rgba(199, 195, 195,.5);
+    box-shadow:5px 5px 10px 10px rgb(16, 16, 17);
+    background-image: linear-gradient(to bottom, rgba(183, 183, 221, 0), rgb(20, 13, 29));
+}
+
+.hero {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+}
+.hero .title {
+    font-size: 50px;
+    color: white;
+    font-family: 'Anton', sans-serif;
+}
+.hero .sub-title {
+    font-size: 30px;
+    color: white;
+    font-family: 'Lobster', cursive;
+}
+.hero .description {
+    color: white;
+}
+.hero .btn-red {
+    display: block;
+    text-align: center;
+    background: rgb(229, 57, 60);
+    width: 100px;
+    padding: 5% 7%;
+    color: white;
+}
+.btn-red:hover {
+    background: rgb(197, 44, 47);
+}
+.vitae {
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 400px 300px;
+    grid-template-rows: 80px 150px 80px;
+    grid-template-areas:"vitae-title vitae-title"
+                        "vitae-profile vitae-me"
+                        "vitae-btn-red ."; 
+    gap: 20px;
+    
+}
+.vitae-title {
+    grid-area: vitae-title;
+    color: rgb(189, 188, 188);
+    display: flex;
+    font-size: 24px;
+    justify-content: center;
+    align-items: center;
+}
+.vitae-profile {
+    grid-area: vitae-profile;
+    color: rgb(189, 188, 188);
+    display: block;
+    text-align: end;
+}
+.vitae-me {
+    grid-area: vitae-me;
+}
+.vitae-me .me-photo {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+.vitae-me .me-name {
+    color: rgb(189, 188, 188);
+    text-transform: uppercase;
+}
+.vitae-me .me-description {
+    color: rgb(189, 188, 188);
+    font-size: 12px;
+}
+.vitae-btn-red {
+    grid-area: vitae-btn-red;
+    display: flex;
+    justify-content: flex-end;
+}
+.vitae-btn-red .btn-red {
+    height: 58px;
+    width: 156px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(229, 57, 60);
+    color: white;
+    border: none;
+    font-size: 16px;
+}
+.vitae-btn-red .btn-red:hover {
+    background: rgb(197, 44, 47);
+}
+
+
 
 
