--- a/assets/style.css
+++ b/assets/style.css
@@ -4,9 +4,10 @@ body {
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     background:  #664a33;
-    background-image: url('./back.jpg');
+    background: url('./back.jpg');
     background-repeat: no-repeat;
     background-size: contain;
+
 }
 a {
     cursor: pointer;
@@ -57,8 +58,8 @@ ul{
 }
 
 .content {
-    margin: 2% 10%;
-    padding: 10%;
+    margin: 0 10%;
+    padding: 5% 10%;
     border: 1px solid rgba(199, 195, 195,.5);
     box-shadow:5px 5px 10px 10px rgb(16, 16, 17);
     background-image: linear-gradient(to bottom, rgba(183, 183, 221, 0), rgb(20, 13, 29));
@@ -154,6 +155,38 @@ ul{
 }
 .vitae-btn-red .btn-red:hover {
     background: rgb(197, 44, 47);
+}
+
+.projects {
+    position: relative;
+    background: #cec8c8;
+    margin: 0 10%;
+    border: 1px solid rgba(199, 195, 195,.5);
+    box-shadow:5px 5px 10px 10px rgb(16, 16, 17);
+}
+.projects-title {
+    text-transform: uppercase;
+    text-align: center;
+}
+.projects-list {
+    /* border: 1px solid red;  */
+    margin: 0 10%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+#job-1 {
+    background: url('./movi.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 250px;
+    width: 430px;
+}
+#job-2 {
+    background: url('./platzivideo.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 250px;
+    width: 430px;
 }
 
 
