--- a/assets/style.css
+++ b/assets/style.css
@@ -5,8 +5,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background:  #664a33;
     background: url('./back.jpg');
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: contain;
+    font-size: 16px;
 
 }
 a {
@@ -26,7 +27,7 @@ ul{
 } */
 .menu-item .menu-option {
     color: white;
-    padding: 20px;
+    padding: 1.3em;
     display: block;
 }
 
@@ -35,26 +36,50 @@ ul{
 }
 .menu-option:hover , .menu-social :hover {
     background: rgb(229, 57, 60);
+    position: relative;
+    z-index: 1;
 }
 .menu-social {
     padding: 0;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .menu-social i{
-    height: 38px;
-    width: 60px;
-    font-size: 24px;
-    display: block;
-    text-align: center;
-    padding-top: 18px;
+    height: 1.8em;
+    width: 2.1em;
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding-top: .2em; */
+}
+.icon-platzi {
+    background: url('https://static.platzi.com/media/favicons/platzi_favicon.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: relative;
+    z-index: 3;
+}
+.icon-hamburger {
+    position: fixed;
+    background-color: rgb(23, 26, 70);
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    display: none;
 }
 .name {
     display: block;
     text-align: center;
     color: white;
     font-family: 'Lobster', cursive;
-    font-size: 58px;
+    font-size: 4em;
 }
 
 .content {
@@ -97,10 +122,10 @@ ul{
     background: rgb(197, 44, 47);
 }
 .vitae {
-    padding: 30px;
+    /* padding: 30px; */
     display: grid;
-    grid-template-columns: 400px 300px;
-    grid-template-rows: 80px 150px 80px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 8em 10em 6px;
     grid-template-areas:"vitae-title vitae-title"
                         "vitae-profile vitae-me"
                         "vitae-btn-red ."; 
@@ -111,10 +136,10 @@ ul{
     grid-area: vitae-title;
     color: rgb(189, 188, 188);
     display: flex;
-    font-size: 24px;
+    font-size: 2em;
     justify-content: center;
     align-items: center;
-}
+}   
 .vitae-profile {
     grid-area: vitae-profile;
     color: rgb(189, 188, 188);
@@ -125,8 +150,8 @@ ul{
     grid-area: vitae-me;
 }
 .vitae-me .me-photo {
-    width: 80px;
-    height: 80px;
+    width: 5em;
+    height: 5em;
     border-radius: 50%;
 }
 .vitae-me .me-name {
@@ -135,7 +160,7 @@ ul{
 }
 .vitae-me .me-description {
     color: rgb(189, 188, 188);
-    font-size: 12px;
+    font-size: .8em;
 }
 .vitae-btn-red {
     grid-area: vitae-btn-red;
@@ -167,6 +192,7 @@ ul{
 .projects-title {
     text-transform: uppercase;
     text-align: center;
+    
 }
 .projects-list {
     /* border: 1px solid red;  */
@@ -188,7 +214,73 @@ ul{
     height: 250px;
     width: 430px;
 }
-
+@media screen and (max-width:767px){
+    body {
+        background-color: red;
+        font-size: 10px;
+    }
+    .icon-hamburger {
+        display: flex;
+    }
+    .menu {
+        display: none;
+    }
+    .vitae {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 8em 10em 6em 1fr;
+        grid-template-areas:"vitae-title"
+                            "vitae-profile"
+                            "vitae-me"
+                            "vitae-btn-red"; 
+        gap: 10px;
+    }
+    .vitae-title {
+        font-size: 1.5em;
+    }   
+    .vitae-profile {
+        text-align: center;
+    }
+    .vitae-me{
+        grid-area: vitae-me;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .vitae-me .me-photo {
+        width: 4em;
+        height: 4em;
+        border-radius: 50%;
+        align-self: center;
+    }
+    .vitae-me .me-name {
+        padding-top: 10px;
+        color: rgb(189, 188, 188);
+        text-transform: uppercase;
+        display: block;
+        text-align: center;
+    }
+    .vitae-me .me-description {
+        color: rgb(189, 188, 188);
+        font-size: .8em;
+        display: block;
+        text-align: center;
+    }
+    .vitae-btn-red {
+        justify-content: center;
+    }
+    .vitae-btn-red .btn-red {
+        height: 3em;
+        width: 11em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgb(229, 57, 60);
+        color: white; 
+        border: none;
+        font-size: 1em;
+    }
+}
 
 
 
