--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@100;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap");
+*{
+    font-family: "be"
+}
+
 body {
     margin: 0;
     padding: 0;
