--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,7 @@ h1, h2, h3, h4, h5 ,h6{
     justify-content: center;
 }
 .btn-email{
-    background-color: var(--light-blue);
+    background-color: var(--sky-blue);
     border-radius: 30px;
     display: flex;
     justify-content: center;
@@ -103,7 +103,7 @@ h1, h2, h3, h4, h5 ,h6{
     width: 40%;
     margin: 0 30%;
     height: 100%;
-    color: var(--white);
+    color: var(--dark-blue);
 }
 .social{
     display: flex;
@@ -111,7 +111,7 @@ h1, h2, h3, h4, h5 ,h6{
 }
 .icon i{
     font-size: 2rem;
-    color: var(--dark-blue);
+    color: var(--blue);
 }
 .about{
     margin-top: 6rem;
