--- a/assets/icons.css
+++ b/assets/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?lay417');
-  src:  url('fonts/icomoon.eot?lay417#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?lay417') format('truetype'),
-    url('fonts/icomoon.woff?lay417') format('woff'),
-    url('fonts/icomoon.svg?lay417#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?j6upld');
+  src:  url('fonts/icomoon.eot?j6upld#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?j6upld') format('truetype'),
+    url('fonts/icomoon.woff?j6upld') format('woff'),
+    url('fonts/icomoon.svg?j6upld#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-blogger:before {
+  content: "\e900";
+}
 .icon-instagram:before {
   content: "\e901";
 }
