--- a/styles/style.css
+++ b/styles/style.css
@@ -175,7 +175,7 @@ h1, h2, h3, h4, h5 ,h6{
 .gallery-container{
     padding: 3%;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 .project-card{
     width: 340px;
@@ -187,7 +187,7 @@ h1, h2, h3, h4, h5 ,h6{
 }
 .top-section img{
     width: 100%;
-
+    max-height: 390px;
 }
 .menuicon{
     position: absolute;
@@ -216,12 +216,12 @@ h1, h2, h3, h4, h5 ,h6{
 }
 .card-name{
     position: absolute;
-    top: 25%;
+    top: calc(30%);
     left: 20px;
     font-size: 2rem;
     font-weight: 900;
     line-height: 1em;
-    opacity: .5;
+    opacity: .7;
     color: var(--gray);
 }
 .card-name span{
