--- a/styles/style.css
+++ b/styles/style.css
@@ -58,13 +58,14 @@ ul {
   list-style: none;
 }
 .header {
+  width: 100%;
+  height: 5.2rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
   position: fixed;
   display: grid;
   grid-template-columns: 1fr 10%;
-  width: 100%;
-  height: 5.2rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  background-color: rgba(0,0,0,0.6);
 }
 .header__home{
   height: 100%;
