--- a/styles/style.css
+++ b/styles/style.css
@@ -1,187 +1,226 @@
+/* Custom properties */
+
 :root {
-  --dark-blue: #2e279d;
-  --blue: #4d80e4;
-  --light-blue: #46b3e6;
-  --sky-blue: #ace5ff;
-  --gray: #606060;
-  --white: #f7f7f7;
+  --first-color: #d90062;
+  --first-alpha-color: rgba(217, 0, 98, 0.75);
+  --second-color: #14192d;
+  --secon-alpha-color: rgba(20, 25, 45, 0,75);
+  --third-color: #501464;
+  --third-alpha-color: rgba(80, 20, 100, 0.75);
+  --white-color: #fff;
+  --gray-light-color: #f3f3f3;
+  --gray-color: #ccc;
+  --gray-dark-color: #616161;
+  --black-color: #010101;
+  --link-color: #509ee3;
+  --title-color: #333;
+  --text-color: #222;
+  --white-alpha-color: rgba(255, 255, 255, 0.5);
+  --black-alpha-color: rgba(0, 0, 0, 0.5);
+  --font: 'Raleway', sans-serif;
+  --max-width: 1200px;
+  --header-height: 4rem;
 }
-/* general */
-* {
-  font-family: Arial, Helvetica, sans-serif;
-  box-sizing: border-box;
-}
+
+/* Reset */
+
 html {
-  background-color: var(--white);
+  box-sizing: border-box;
+  font-family: var(--font);
+  font-size: 16px;
+  scroll-behavior: smooth;
 }
-ul,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  padding: 0;
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+body {
   margin: 0;
-}
-li {
-  list-style: none;
+  overflow-x: hidden;
+  color: var(--text-color);
 }
 a {
-  text-decoration: none;
-  color: black;
+  color: var(--link-color);
+  transition: all 0.5s ease-out;
 }
 a:hover {
-  cursor: pointer;
+  opacity: 0.75;
 }
-.title-3 {
-  display: block;
-  text-align: center;
-  padding-top: 1rem;
-  padding-bottom: 2rem;
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+h1 {
   font-size: 2rem;
-  font-family: Arial, Helvetica, sans-serif;
-  color: var(--dark-blue);
 }
-.title-3 span {
-  font-family: Arial, Helvetica, sans-serif;
-  color: var(--blue);
+h2 {
+  font-size: 1.5rem;
 }
-/* Tooltip */
-.tooltip {
-  position: relative;
-  display: inline-block;
+h3 {
+  font-size: 1.25rem;
 }
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 10rem;
-  background-color: #555;
-  color: #fff;
+h4 {
+  font-size: 1rem;
+}
+h5 {
+  font-size: 0.85rem;
+}
+h6 {
+  font-size: 0.7rem;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+p {
+  line-height: 1.6;
+}
+
+/* Components */
+
+/* *************HeroImage********* */
+.hero-image {
+  background-image: var(--hero-image);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: var(--hero-attachment);
+}
+.hero-image-opacity {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  border-radius: .6rem;
-  padding: .5rem 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -5rem;
+  background-color: var(--hero-opacity-color);
+}
+.hero-image-title {
+  font-size: 7.5vw;
+  color: var(--hero-text-color)
+}
+
+/* *************Menu********* */
+.menu-btn {
+  outline: thin solid var(--first-color);
+  border: 0;
+  cursor: pointer;
+  background-color: var(--second-color);
+}
+
+.menu-btn svg {
+  fill: var(--first-color);
+}
+
+.menu {
+  position: fixed;
+  left: 0;
+  bottom: var(--header-height);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--second-color);
   opacity: 0;
-  transition: opacity 0.3s;
-  font-size: .8rem;
+  pointer-events: none;
+  transition: opacity 0.5s ease;
 }
 
-.tooltip .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -.5rem;
-  border-width: .5rem;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
+.menu.is-active {
   opacity: 1;
+  pointer-events: auto;
 }
 
-#home {
+.menu a {
+  padding: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: var(--first-color);
+}
+
+.menu a:hover {
+  color: var(--white-color);
+  background-color: var(--first-color);
+}
+@media screen and (min-width:1024px){
+  .menu-btn{
+    display: none;
+  }
+  .menu {
+    position: static;
+    width: auto;
+    flex-direction: row;
+    opacity: 1;
+    pointer-events: auto;
+  }
+  .menu a {
+    padding: 0 1rem;
+  }
+  .menu a:last-child{
+    padding-right: 0;
+  }
+  .menu a:hover {
+    background-color: transparent;
+  }
+}
+
+/* Utilities */
+.box-shadow-1 {
+  box-shadow: .25rem .25rem 1rem rgba(0,0,0,0.25);
+}
+.btn {
+  border-radius: .5rem;
+  padding: 1rem;
+  display: inline-block;
+  width: 200px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: var(--white-color);
+  background-color: var(--first-color);
+}
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: var(--max-width);
+}
+.none {
+  display: none;
+}
+
+/* Site Styles */
+.header {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 999;
+  padding: 1rem;
+  width: 100%;
+  height: var(--header-height);
+  background-color: var(--second-color);
+}
+
+.header > .container {
   display: flex;
   justify-content: space-between;
-  margin: 0 2.5rem;
-}
-.logo .name {
-  font-family: Arial, Helvetica, sans-serif;
-  color: var(--blue);
-  margin: 1rem;
-}
-.welcome {
-  margin-top: 6rem;
-  margin-bottom: 6rem;
-  display: grid;
-  gap: 2rem;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 3rem 3rem;
-}
-.greeting {
-  font-size: 2rem;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-}
-.btn-email {
-  background-color: var(--sky-blue);
-  border-radius: 30px;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  width: 40%;
-  margin: 0 30%;
-  height: 100%;
-  color: var(--dark-blue);
 }
-.social {
-  display: flex;
-  justify-content: space-around;
-}
-.icon i {
-  padding: 0;
+
+.logo a {
+  color: var(--first-color);
+  font-weight: bold;
   font-size: 2rem;
-  color: var(--blue);
+  text-decoration: none;
 }
-.about {
-  margin-top: 6rem;
-  margin-bottom: 2rem;
+@media screen and (min-width: 768px){
+
 }
-.about-photo {
-  display: flex;
-  justify-content: center;
-}
-.about-photo img {
-  width: 14rem;
-  border-radius: 10px;
-}
-.description {
-  color: var(--gray);
-  text-align: center;
-  margin: 2rem;
-}
-.gallery-container {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 1rem;
-}
-.project-card {
+@media screen and (min-width: 1024px){
+  .header {
+    position: sticky;
+    top: 0;
     padding: .5rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  border-radius: 1.5rem;
-  background-color: var(--sky-blue);
-}
-.project-card a {
-  font-size: 2rem;
-}
-.footer {
-  background-color: var(--blue);
-  margin-top: 5rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-.footer .title-3 {
-  color: var(--white);
-}
-.footer .icon {
-  padding: 1rem;
-}
-.footer .icon i {
-  color: var(--white);
-}
-.footer p {
-  display: flex;
-  justify-content: center;
-  color: var(--white);
+    height: calc(var(--header-height) - 0.5rem);
+  }
 }
